--- a/ui/app/styles/home.css
+++ b/ui/app/styles/home.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
-h1, h2, header, nav {
+h1, h2, header, nav, footer {
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -16,17 +16,118 @@ header, footer {
     height: 30px;
 }
 
+.nxc-btn {
+    background-color: #3f556c;
+    border-bottom: 3px solid #2d3e50;
+    color: #ffffff;
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    height: 3em;
+    text-transform: uppercase;
+    border-radius: 0.25em;
+    padding-left: 2em;
+    padding-right: 2em;
+}
+
+.btn-orange {
+    background-color: #ff9e2c;
+    border-bottom: 2px solid #ff7621;
+}
+
+header a, footer a {
+    color: #ffffff !important;
+    font-size: 13px;
+    font-weight: normal;
+}
+
+header ul, footer ul {
+    list-style: none !important;
+    margin-bottom: 0px;
+}
+
+header li, footer li {
+    display: inline-block !important;
+    float: left;
+}
+
+
+.facebook, .twitter, .googleplus, .search-form {
+    background-color: #3f556b;
+    width: 30px;
+    height: 30px;
+    padding-top: 5px;
+}
+
+.search-form {
+    background-color: #ff9e2c;
+}
+
+.box {
+    -webkit-transition:all linear 0.3s;
+    -moz-transition:all linear 0.3s;
+    -ms-transition:all linear 0.3s;
+    -o-transition:all linear 0.3s;
+    transition:all linear 0.3s;
+    border: 0;
+    color: transparent;
+    font-size: 13px;
+    line-height: 18px;
+    cursor: pointer;
+    box-shadow: none;
+    height: 30px;
+    margin: 0;
+    padding: 0;
+}
+
+.box.ng-hide-add,
+.box.ng-hide-remove {
+    display:block!important;
+}
+
+.box.ng-hide {
+    opacity:0.5;
+}
+
+.icon-category {
+    display: block;
+    float: left;
+    background-color: #ff9e2c;
+    border-color: #fa773f;
+    border-bottom: 3px;
+    height: 50px;
+    width: 50px;
+    margin-right: 10px;
+    text-align: center;
+}
+
+.marketing {
+    background-color: #f0f0f0;
+    padding-bottom: 30px;
+}
+
+.more-link {
+    text-transform: uppercase;
+    font-weight: bold;
+    float: right;
+}
+
+.more-link > a {
+    color: #767676;
+}
+
+/*************** SUB NAVIGATION ***********/
+
 nav {
     background-color: #0cc2d7;
     color: #ffffff;
-    font-size: 15px;
-    border-bottom: 5px solid #46dcea !important;
-    text-transform: uppercase;
+    margin-bottom: 0px !important;
 }
 
 .nav > li > a {
     color: #ffffff !important;
     padding-bottom: 5px;
+    margin-right: 20px;
 }
 
 .nav > li > a:hover,
@@ -38,73 +139,213 @@ nav {
     color: #333333;
 }
 
-.nxc-btn {
-    background-color: #3f556c;
-    border-bottom: 2px solid #2d3e50;
-    color: #ffffff;
-    border-top: 0px;
-    border-left: 0px;
-    border-right: 0px;
+ul.navbar-nav {
+    margin-top: 30px;
+}
+
+.head {
+    font-size: 15px;
+    border-bottom: 5px solid #46dcea !important;
     text-transform: uppercase;
 }
 
-header a {
+.foot {
+    border-top: 5px solid #46dcea !important;
+}
+
+/************** FOOTER LINKS ******************/
+
+.footer-link-title {
+    margin-bottom: 10px;
+    color: #2d3e50;
+    font-weight: bold;
+}
+
+.footer-links > li:before {
+    font-family: 'FontAwesome';
+    content: '\f105';
+    margin:0 5px 0 -15px;
+}
+
+.footer-links {
+    list-style-type: none;
+    text-transform: none;
+    font-size: 12px;
+    line-height: 25px;
+}
+
+.footer-links > li > a {
     color: #ffffff !important;
-    font-size: 13px;
-    font-weight: normal;
 }
 
-header ul {
-    list-style: none !important;
-    margin-bottom: 0px;
+/************** CAROUSEL ******************/
+
+.nxc-body {
+    background-color: #f6f6f6;
 }
 
-header li {
-    display: inline-block !important;
+.carousel {
+    border-bottom: 5px solid #ececec;
 }
 
-
-.facebook, .twitter, .googleplus {
-    background-color: #3f556b;
-    width: 30px;
-    height: 30px;
-    float: right;
+.roundabout-holder {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    height: 40em;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    width: 60%;
+}
+.roundabout-moveable-item {
+    height: 40em;
+    width: 40em;
+    background-color: #e6e6e6;
+    border: 1px solid #ffffff;
+    text-align: center;
+    border-radius: 50%;
+    box-shadow: 0 0 0 20px rgba(255,255,255,0.8);
+}
+.roundabout-in-focus {
+    cursor: auto;
 }
 
-#search-form .search-text-box {
-    background-color: #ff9e2c;
-    background-image: url(../images/icon-search.png);
-    background-position: 6px 56%;
-    background-repeat: no-repeat;
-    border: 0;
-    color: transparent;
-    font-size: 13px;
-    line-height: 18px;
-    cursor: pointer;
-    -webkit-transition: all .3s ease-in-out;
-    -moz-transition: all .3s ease-in-out;
-    -o-transition: all .3s ease-in-out;
-    -ms-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    width: 30px;
-    height: 30px;
+.xchange-carousel {
+    background-color: #f3f3f3;
+}
+
+.poker-carousel {
+    background-color: #2c3f50;
+    color: #ffffff;
+}
+
+.roulette-carousel {
+    background-color: #0cc2d7;
+    color: #ffffff;
+}
+
+/************** LAST PRODUCTS ******************/
+/*
+This is the visible area of you carousel.
+Set a width here to define how much items are visible.
+The width can be either fixed in px or flexible in %.
+Position must be relative!
+*/
+.jcarousel {
+    position: relative;
+    overflow: hidden;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/*
+This is the container of the carousel items.
+You must ensure that the position is relative or absolute and
+that the width is big enough to contain all items.
+*/
+.jcarousel > div, .jcarousel ul {
+    width: 20000em;
+    position: relative;
+
+    /* Optional, required in this case since it's a <ul> element */
+    list-style: none;
     margin: 0;
     padding: 0;
 }
 
-.categories > li {
+/*
+These are the item elements. jCarousel works best, if the items
+have a fixed width and height (but it's not required).
+*/
+.jcarousel-element {
+    /* Required only for block elements like <li>'s */
+    float: left;
+    margin-left: 18px;
+    margin-right: 18px;
+    text-align: center;
+    background-color: #f0f0f0;
+    border-radius: 10px;
+    padding-bottom: 10px;
 }
 
-ul.categories {
-    list-style: none;
-    display: inline;
+.jcarousel li {
+    float: left;
 }
 
-.categories > li > img {
-    background-color: #ff9e2c;
-    border-color: #fa773f;
-    border-bottom: 3px;
-    border-radius: ;
+.jcarousel-element > img {
+    border-radius: 10px;
+}
+
+.carousel-container {
+    position: relative;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+#last_products_prev {
+    float: left;
+}
+
+#last_products_next {
+    right: 0px;
+}
+
+#last_products_prev, #last_products_next {
+    display: inline-block !important;
+    position: absolute;
+    top: 33%;
+}
+
+/************ CUSTOM CONTROLS *********************/
+
+.nav-tabs > li {
+    background-color: #f0f0f0;
+}
+
+.nav-tabs > li > a:hover {
+    border: 0;
+}
+
+.nav-tabs > li > a {
+    margin: 0;
+}
+
+.tab-content > .active {
+    background-color: #ffffff;
+    display: inline-block !important;
+}
+
+.tab-pane {
+    width: 100%;
+}
+
+.select-style {
+    padding: 0;
+    margin: 0;
+    width: 15em;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    overflow: hidden;
+    background: #fff url("http://www.scottgood.com/jsg/blog.nsf/images/arrowdown.gif") no-repeat 95% 50%;
+}
+
+.select-style select {
+    padding: 5px 8px;
+    height: 2.5em;
+    border: none;
+    width: 130%;
+    box-shadow: none;
+    background-color: transparent;
+    background-image: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.select-style select:focus {
+    outline: none;
 }
