Added 3rd party JS not present in bower

--- a/ui/app/views/main2.html
+++ b/ui/app/views/main2.html
@@ -205,8 +205,8 @@
  </div>
 
  <script src="bower_components/holderjs/holder.js"></script>
- <script src="bower_components/roundabout/jquery.roundabout.js"></script>
-<script src="bower_components/jcarousel/jquery.jcarousel.min.js"></script>
+ <script src="js_third_party/jquery.roundabout.js"></script>
+<script src="bower_components/jcarousel/dist/jquery.jcarousel.min.js"></script>
 <!-- <script src="bower_components/carouFredSel/jquery.carouFredSel-6.2.1.js"></script> -->
 
  <script>
